Enhance README.md with detailed JVM explanations
Updated the README.md to enhance formatting and provide detailed explanations about JVM concepts, including architecture, memory management, garbage collection, and performance optimization.